--- a/src/index.css
+++ b/src/index.css
@@ -3,18 +3,12 @@
 body {
   margin: 0;
   font-family: 'Ubuntu', sans-serif;
-  /* font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
+
   -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale; */
+  -moz-osx-font-smoothing: grayscale;
 
   color: #ffffff;
   background-color: #161515;
-
-  /* background-size: 100%;
-  background-attachment: fixed; */
-  /* background-color: #5b046d; */
 }
 
 code {
